package domain;

public enum CellType
{
    SNAKE, LADDER, PLAIN
}
